--- a/package.json
+++ b/package.json
@@ -19,13 +19,17 @@
     "gatsby-plugin-postcss": "^2.1.19",
     "gatsby-plugin-purgecss": "^4.0.1",
     "gatsby-plugin-react-helmet": "^3.1.21",
+    "gatsby-plugin-typography": "^2.3.21",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-helmet": "^5.2.1"
+    "react-helmet": "^5.2.1",
+    "react-typography": "^0.16.19",
+    "typography": "^0.16.19"
   },
   "devDependencies": {
     "prettier": "^1.19.1",
-    "tailwindcss": "^1.2.0-canary.5"
+    "tailwindcss": "^1.2.0-canary.5",
+    "typography-theme-ocean-beach": "^0.16.19"
   },
   "repository": {
     "type": "git",
