--- a/package.json
+++ b/package.json
@@ -11,21 +11,42 @@
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
+    "type-check": "tsc",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
-    "cssnano": "^4.1.10",
     "gatsby": "^2.18.12",
-    "gatsby-plugin-postcss": "^2.1.19",
     "gatsby-plugin-purgecss": "^4.0.1",
     "gatsby-plugin-react-helmet": "^3.1.21",
+    "gatsby-plugin-sass": "^2.1.27",
+    "gatsby-plugin-sharp": "^2.3.13",
+    "gatsby-plugin-typescript": "^2.1.26",
+    "gatsby-remark-images": "^3.1.42",
+    "gatsby-remark-relative-images": "^0.2.3",
+    "gatsby-source-filesystem": "^2.1.46",
+    "gatsby-transformer-remark": "^2.6.48",
     "react": "^16.12.0",
+    "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1"
   },
   "devDependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.26",
+    "@fortawesome/free-brands-svg-icons": "^5.12.0",
+    "@fortawesome/free-solid-svg-icons": "^5.12.0",
+    "@fortawesome/react-fontawesome": "^0.1.8",
+    "@types/node": "^13.1.6",
+    "@types/react": "^16.9.17",
+    "@types/react-bootstrap": "^0.32.20",
+    "@types/react-dom": "^16.9.4",
+    "@types/react-helmet": "^5.0.15",
+    "bootstrap": "^4.4.1",
+    "moment": "^2.24.0",
+    "moment-timezone": "^0.5.27",
+    "node-sass": "^4.13.0",
     "prettier": "^1.19.1",
-    "tailwindcss": "^1.2.0-canary.5"
+    "react-moment": "^0.9.7",
+    "typescript": "^3.7.4"
   },
   "repository": {
     "type": "git",
