WIP - Modules pages content and toc complete

--- a/package.json
+++ b/package.json
@@ -21,8 +21,10 @@
     "gatsby-plugin-sass": "^2.1.27",
     "gatsby-plugin-sharp": "^2.3.13",
     "gatsby-plugin-typescript": "^2.1.26",
+    "gatsby-remark-autolink-headers": "^2.1.23",
     "gatsby-remark-images": "^3.1.42",
     "gatsby-remark-relative-images": "^0.2.3",
+    "gatsby-remark-vscode": "^1.4.0",
     "gatsby-source-filesystem": "^2.1.46",
     "gatsby-transformer-remark": "^2.6.48",
     "react": "^16.12.0",
