--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "gatsby-transformer-remark": "^2.6.48",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
+    "react-bootstrap-switch": "^15.5.3",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1"
   },
