--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
   "dependencies": {
     "cssnano": "^4.1.10",
     "gatsby": "^2.18.12",
-    "gatsby-plugin-postcss": "^2.1.19",
     "gatsby-plugin-purgecss": "^4.0.1",
     "gatsby-plugin-react-helmet": "^3.1.21",
     "react": "^16.12.0",
@@ -24,8 +23,7 @@
     "react-helmet": "^5.2.1"
   },
   "devDependencies": {
-    "prettier": "^1.19.1",
-    "tailwindcss": "^1.2.0-canary.5"
+    "prettier": "^1.19.1"
   },
   "repository": {
     "type": "git",
