--- a/package.json
+++ b/package.json
@@ -14,15 +14,20 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "bootstrap": "^4.4.1",
     "cssnano": "^4.1.10",
     "gatsby": "^2.18.12",
     "gatsby-plugin-purgecss": "^4.0.1",
     "gatsby-plugin-react-helmet": "^3.1.21",
+    "gatsby-plugin-sass": "^2.1.27",
     "react": "^16.12.0",
+    "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1"
   },
   "devDependencies": {
+    "@types/react-bootstrap": "^0.32.20",
+    "node-sass": "^4.13.0",
     "prettier": "^1.19.1"
   },
   "repository": {
