--- a/package.json
+++ b/package.json
@@ -20,6 +20,11 @@
     "gatsby-plugin-purgecss": "^4.0.1",
     "gatsby-plugin-react-helmet": "^3.1.21",
     "gatsby-plugin-sass": "^2.1.27",
+    "gatsby-plugin-sharp": "^2.3.13",
+    "gatsby-remark-autolink-headers": "^2.1.23",
+    "gatsby-remark-images": "^3.1.42",
+    "gatsby-remark-relative-images": "^0.2.3",
+    "gatsby-remark-vscode": "^1.4.0",
     "gatsby-source-filesystem": "^2.1.46",
     "gatsby-transformer-remark": "^2.6.48",
     "react": "^16.12.0",
