--- a/package.json
+++ b/package.json
@@ -20,12 +20,24 @@
     "gatsby-plugin-purgecss": "^4.0.1",
     "gatsby-plugin-react-helmet": "^3.1.21",
     "gatsby-plugin-sass": "^2.1.27",
+    "gatsby-plugin-sharp": "^2.3.13",
+    "gatsby-remark-autolink-headers": "^2.1.23",
+    "gatsby-remark-images": "^3.1.42",
+    "gatsby-remark-prismjs": "^3.3.30",
+    "gatsby-remark-relative-images": "^0.2.3",
+    "gatsby-remark-vscode": "^1.4.0",
     "gatsby-source-filesystem": "^2.1.46",
     "gatsby-transformer-remark": "^2.6.48",
+    "github-slugger": "^1.2.1",
+    "mdast-util-to-string": "^1.0.7",
+    "moment": "^2.24.0",
+    "moment-timezone": "^0.5.27",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
-    "react-helmet": "^5.2.1"
+    "react-helmet": "^5.2.1",
+    "react-moment": "^0.9.7",
+    "unist-util-visit": "^2.0.1"
   },
   "devDependencies": {
     "@types/react-bootstrap": "^0.32.20",
